[package]
name = "chan"
version = "0.1.23"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = "DEPRECATED. Use crossbeam-channel instead."
documentation = "https://docs.rs/chan"
homepage = "https://github.com/BurntSushi/chan"
repository = "https://github.com/BurntSushi/chan"
readme = "README.md"
keywords = ["channel", "asynchronous", "mpmc", "golang", "select"]
license = "Unlicense/MIT"

[dependencies]
rand = "0.3"

[features]
nightly = []

[dev-dependencies]
hyper = { version = "0.7" }
